Rename for github pages

--- a/TempFan.html
+++ b/TempFan.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <nav class="navbar navbar-customclass navbar-expand-lg fixed-top" aria-label="First Schema">
         <div class="container-fluid">
-            <a class="navbar-brand" href="planetek_index.html">Team 3 of 3</a>
+            <a class="navbar-brand" href="index.html">Team 3 of 3</a>
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
