--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="carousel-item">
                 <a href="./TempFan.html">Temperature-controlled Fan
-                <img src="./OneBigCircuit.jpg" width="180" height="620" class="d-block w-100 " alt="... ">
+                <img src="./OneBigCircuit.gif" width="180" height="620" class="d-block w-100 " alt="... ">
                 </a>
             </div>
         </div>
