--- a/TempFan.html
+++ b/TempFan.html
@@ -64,6 +64,26 @@
                             data: JSON.parse(reader.result)
                         }]
                     },
+                    options: {
+                        title: {
+                            display: true,
+                            text: 'Temperature controlled Fan'
+                        },
+                        scales: {
+                            yAxes: [{
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: "Fan speed"
+                                }
+                            }],
+                            xAxes: [{
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: "Degrees of temperature (Celsius)"
+                                }
+                            }]
+                        }
+                    }
                 });
 
                 new Chart("LineChart", {
@@ -76,6 +96,26 @@
                             data: JSON.parse(reader.result)
                         }]
                     },
+                    options: {
+                        title: {
+                            display: true,
+                            text: 'Temperature controlled Fan'
+                        },
+                        scales: {
+                            yAxes: [{
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: "Fan speed"
+                                }
+                            }],
+                            xAxes: [{
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: "Degrees of temperature (Celsius)"
+                                }
+                            }]
+                        }
+                    }
                 });
             };
 
